--- a/frontend/app/templates/admin/modules.hbs
+++ b/frontend/app/templates/admin/modules.hbs
@@ -1,33 +1,13 @@
 <form class="ui form {{if isLoading 'loading'}}" {{action 'submit' on='submit'}}>
-  <div class="ui basic segment grid">
-    <div class="ui row segment">
-      <div class="column eight wide">
-        Ticketing
-      </div>
-      <div class="ui column eight wide field right aligned">
-        {{ui-checkbox class='toggle' checked=model.ticketInclude onChange=(action (mut model.ticketInclude))}}
-      </div>
+    <div class="ui secondary header">
+      Payments
     </div>
-    <div class="ui row segment">
-      <div class="column eight wide">
-        Payments
-      </div>
-      <div class="ui column eight wide field right aligned">
-        {{ui-checkbox class='toggle' checked=model.paymentInclude onChange=(action (mut model.paymentInclude))}}
-      </div>
+    <div class="ui horizontal divider"></div>
+    <div>
+      {{ui-checkbox class='toggle' checked=model.paymentInclude onChange=(action (mut model.paymentInclude))}}
     </div>
-    <div class="ui row segment">
-      <div class="column eight wide">
-        Donations
-      </div>
-      <div class="ui eight column wide field right aligned">
-        {{ui-checkbox class='toggle' checked=model.donationInclude onChange=(action (mut model.donationInclude))}}
-      </div>
+    <div class="ui horizontal divider"></div>
+    <div>
+      <button class="ui teal button">Save</button>
     </div>
-    <div class="row">
-      <div class="sixteen column wide right aligned">
-        <button class="ui teal button">Save</button>
-      </div>
-    </div>
-  </div>
 </form>
