fixes blog link in sitemap

--- a/frontend/app/templates/sitemap.hbs
+++ b/frontend/app/templates/sitemap.hbs
@@ -15,7 +15,7 @@
     <div class='column'>
         <h4>{{init-cap 'badgeyay'}}</h4>
         <a href='https://github.com/fossasia/badgeyay' class='links'>{{init-cap 'github repository'}}</a><br>
-        <a href='blog.fossasia.org' class='links'>{{init-cap 'blog'}}</a>
+        <a href='https://blog.fossasia.org' class='links'>{{init-cap 'blog'}}</a>
     </div>
         <div class='column'>
             <h4>{{init-cap 'account management'}}</h4>
