Fixes #1376 : Added settings tab in admin

--- a/frontend/app/templates/admin.hbs
+++ b/frontend/app/templates/admin.hbs
@@ -22,6 +22,9 @@
       {{#link-to 'admin.modules' class='item'}}
         {{'Modules'}}
       {{/link-to}}
+      {{#link-to 'admin.settings' class='item'}}
+        {{'Settings'}}
+      {{/link-to}}
     {{/tabbed-navigation}}
   </div>
 </div>
