Improve the UI of Admin Section

--- a/frontend/app/templates/admin/index.hbs
+++ b/frontend/app/templates/admin/index.hbs
@@ -1,9 +1,9 @@
 <div class="ui stackable grid">
     <div class="row">
         <div class="center aligned column">
-            <h5 class="ui sub header">
+            <div class="ui header">
                 Version 2.0
-            </h5>
+            </div>
         </div>
     </div>
     <div class="row">
