Added Delete Badges Functionality in Admin Panel

--- a/frontend/app/templates/admin/badges/list.hbs
+++ b/frontend/app/templates/admin/badges/list.hbs
@@ -1,7 +1,7 @@
 <div class="ui grid user-grid">
     <div class="row">
         <div class="sixteen wide column">
-            {{badge-table badges=badges prevPage=(action 'prevPage') nextPage=(action 'nextPage')}}
+            {{badge-table badges=badges user=user session=session sendbadgeId=(action 'deleteBadge' badge) prevPage=(action 'prevPage') nextPage=(action 'nextPage')}}
         </div>
     </div>
 </div>
