Simplifies the user-guide component

--- a/frontend/app/templates/components/user-component/user-guide.hbs
+++ b/frontend/app/templates/components/user-component/user-guide.hbs
@@ -5,7 +5,7 @@
     </div>
     <div class="ui segments">
         <div class="ui segment">
-            <div class="ui raised segment">
+            <div class="ui">
                 <div class="ui header">
                     <i class="file excel icon"></i>
                     <div class="content">
@@ -68,7 +68,7 @@
             </div>
         </div>
         <div class="ui segment">
-            <div class="ui raised segment">
+            <div class="ui">
                 <div class="ui header">
                     <i class="edit icon"></i>
                     <div class="content">
