--- a/frontend/app/templates/components/badge-table.hbs
+++ b/frontend/app/templates/components/badge-table.hbs
@@ -1,7 +1,6 @@
-<table class="ui celled table">
+<table class="ui table">
     <thead>
         <tr>
-            <th>Badge Creator ID</th>
             <th>Badge Creator Name</th>
             <th>Badge Name</th>
             <th>Created At</th>
@@ -12,7 +11,6 @@
     <tbody>
         {{#each badges as |badge|}}
             <tr>
-                <td>{{badge.user_id}}</td>
                 <td>{{badge.username}}</td>
                 <td>{{badge.badge_name}}</td>
                 <td>{{sanitizeDate badge.created_at}}</td>
@@ -41,7 +39,7 @@
     </tbody>
     <tfoot>
         <tr>
-            <th colspan="6">
+            <th colspan="5">
                 <div class="ui right floated pagination menu">
                     <a class="icon item" {{action 'prevPage'}}>
                         <i class="left chevron icon"></i>
