--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -1,20 +1,14 @@
-<div class="main-container create-badge">
+<div class="main-container create-badge segments">
     <div class="ui raised segment">
         <div class="ui form width-container">
             <p>
                 <b>Name your Badges</b>
             </p>
-            {{#ui-accordion class="styled fluid"}}
-                <div class="title">
-                    <i class="plus icon"></i>
-                    Enter Name
+            <div class="content">
+                <div class="center aligned">
+                    {{ data-component/name-component sendName=(action 'mutateName')}}
                 </div>
-                <div class="content">
-                    <div class="center aligned">
-                        {{ data-component/name-component sendName=(action 'mutateName')}}
-                    </div>
-                </div>
-            {{/ui-accordion}}
+            </div>
         </div>
     </div>
     <div class="ui raised segment">
@@ -25,26 +19,19 @@
                     <i class="info icon"></i>
                 </a>
             </p>
-            {{#ui-accordion class="styled fluid"}}
-                <div class="title" onclick={{action "csvClicked"}}>
-                    <i class="plus icon"></i>
-                    Add CSV File
-                </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ data-component/csv-component sendCSV=(action 'mutateCSV') }}
                     </div>
                 </div>
-                <div class="title" onclick={{action "manualClicked"}}>
-                    <i class="plus icon"></i>
-                    Add Manual Data
-                </div>
+                  <div class="ui horizontal divider">
+                    Or
+                  </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ data-component/text-component sendText=(action 'mutateText') }}
                     </div>
                 </div>
-            {{/ui-accordion}}
         </div>
     </div>
     <div class="ui raised segment">
@@ -52,17 +39,11 @@
             <p>
                 <b>Select from one of the Paper Sizes</b>
             </p>
-            {{#ui-accordion class="styled fluid"}}
-                <div class="title">
-                    <i class="plus icon"></i>
-                    Paper Size
-                </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ badge-component/badge-size sendBadgeSize=(action 'mutateBadgeSize') }}
                     </div>
                 </div>
-            {{/ui-accordion}}
         </div>
     </div>
     <div class="ui raised segment">
@@ -74,35 +55,27 @@
                     <i class="info icon"></i>
                 </a>
             </p>
-            {{#ui-accordion class="styled fluid"}}
-                <div class="title" onclick={{action 'defImageClicked'}}>
-                    <i class="plus icon"></i>
-                    Default Images
-                </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ background-component/def-image-component defImages=defImages sendDefImage=(action 'mutateBackground') }}
                     </div>
                 </div>
-                <div class="title" onclick={{action 'bgColorClicked'}}>
-                    <i class="plus icon"></i>
-                    Select from Background color
-                </div>
+                <div class="ui horizontal divider">
+                    Or
+                  </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') }}
                     </div>
                 </div>
-                <div class="title" onclick={{action 'custImgClicked'}}>
-                    <i class="plus icon"></i>
-                    Upload a custom image
-                </div>
+                <div class="ui horizontal divider">
+                    Or
+                  </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ background-component/image-component sendImage=(action 'mutateCustomImage') }}
                     </div>
                 </div>
-            {{/ui-accordion}}
         </div>
     </div>
     <div class="ui raised segment">
@@ -110,35 +83,23 @@
             <p>
                 <b>Select from following font customizations</b>
             </p>
-            {{#ui-accordion class="styled fluid"}}
-                <div class="title">
-                    <i class="plus icon"></i>
-                    Font Family
-                </div>
                 <div class="content">
                     <div class="center aligned">
                         {{ text-component/font-type sendDefFont=(action 'mutateCustomFont')}}
                     </div>
                 </div>
-                <div class="title">
-                    <i class="plus icon"></i>
-                    Font Color
-                </div>
+                <div class="ui horizontal divider"></div>
                 <div class="content">
                     <div class="center aligned">
                         {{ text-component/font-color sendDefFontColor=(action 'mutateDefFontColor')}}
                     </div>
                 </div>
-                <div class="title">
-                    <i class="plus icon"></i>
-                    Font Size
-                </div>
+                <div class="ui horizontal divider"></div>
                 <div class="content">
                     <div class="center aligned">
                         {{ text-component/font-size sendDefSize=(action 'mutateFontSize')}}
                     </div>
                 </div>
-            {{/ui-accordion}}
         </div>
     </div>
     <button {{action "submitForm"}} class="ui fluid orange {{if authToken.isEmailVerified '' 'disabled'}} button">Create Badges</button>
