--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -10,7 +10,7 @@
                     {{#link-to 'my-badges' class="large item navbar-dropdown upper"}}
                         My Badges
                     {{/link-to}}
-                    {{#link-to 'my-profile' class="large item navbar-dropdown upper"}}
+                    {{#link-to 'settings' class="large item navbar-dropdown upper"}}
                         Settings
                     {{/link-to}}
                     {{#if authToken.permissions.isAdmin}}
