Adds fix for PR

--- a/frontend/app/templates/admin/users/list.hbs
+++ b/frontend/app/templates/admin/users/list.hbs
@@ -1,7 +1,7 @@
 <div class="ui grid user-grid">
     <div class="row">
         <div class="sixteen wide column">
-            {{user-table users=users prevPage=(action 'prevPage') nextPage=(action 'nextPage') allow_prev=allow_prev allow_next=allow_next}}
+            {{user-table users=users prevPage=(action 'prevPage') nextPage=(action 'nextPage') allow_prev=allow_prev allow_next=allow_next allow=allow}}
         </div>
     </div>
 </div>
