--- a/frontend/app/templates/components/user-table.hbs
+++ b/frontend/app/templates/components/user-table.hbs
@@ -45,25 +45,27 @@
         </tr>
         {{/each}}
     </tbody>
-    <tfoot>
-        <tr>
-            <th colspan="7">
-                <div class="ui right floated pagination menu">
-                    {{#if allow_prev}}
-                        <a class="icon item" {{action 'prevPage'}}>
-                            <i class="left chevron icon"></i>
-                        </a>
-                    {{/if}}
+    {{#if allow}}
+        <tfoot>
+            <tr>
+                <th colspan="7">
+                    <div class="ui right floated pagination menu">
+                        {{#if allow_prev}}
+                            <a class="icon item" {{action 'prevPage'}}>
+                                <i class="left chevron icon"></i>
+                            </a>
+                        {{/if}}
 
-                    {{#if allow_next}}
-                        <a class="icon item" {{action 'nextPage'}}>
-                            <i class="right chevron icon"></i>
-                        </a>
-                    {{/if}}
-                </div>
-            </th>
-        </tr>
-    </tfoot>
+                        {{#if allow_next}}
+                            <a class="icon item" {{action 'nextPage'}}>
+                                <i class="right chevron icon"></i>
+                            </a>
+                        {{/if}}
+                    </div>
+                </th>
+            </tr>
+        </tfoot>
+    {{/if}}
 </table>
 
 {{#ui-modal name="user-edit" class="user-edit" detachable=true onApprove=(action 'approveModal') onDeny=(action 'denyModal')}}
