Fixes #1402 : Adds if construct to paginations links (#1415)
* Adds if construct to paginations links

* Adds fix for PR

--- a/frontend/app/templates/components/badge-table.hbs
+++ b/frontend/app/templates/components/badge-table.hbs
@@ -37,18 +37,25 @@
             </tr>
         {{/each}}
     </tbody>
-    <tfoot>
-        <tr>
-            <th colspan="5">
-                <div class="ui right floated pagination menu">
-                    <a class="icon item" {{action 'prevPage'}}>
-                        <i class="left chevron icon"></i>
-                    </a>
-                    <a class="icon item" {{action 'nextPage'}}>
-                        <i class="right chevron icon"></i>
-                    </a>
-                </div>
-            </th>
-        </tr>
-    </tfoot>
+    {{#if allow}}
+        <tfoot>
+            <tr>
+                <th colspan="5">
+                    <div class="ui right floated pagination menu">
+                        {{#if allow_prev}}
+                            <a class="icon item" {{action 'prevPage'}}>
+                                <i class="left chevron icon"></i>
+                            </a>
+                        {{/if}}
+
+                        {{#if allow_next}}
+                            <a class="icon item" {{action 'nextPage'}}>
+                                <i class="right chevron icon"></i>
+                            </a>
+                        {{/if}}
+                    </div>
+                </th>
+            </tr>
+        </tfoot>
+    {{/if}}
 </table>
