--- a/frontend/app/templates/components/badge-component/badge-size.hbs
+++ b/frontend/app/templates/components/badge-component/badge-size.hbs
@@ -1,7 +1,7 @@
 <div class="inline fields">
   <div class="field">
-    <div class="ui radio checkbox">
-      <input name="size" value="A3" type="radio">
+    <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' '4x3'}}>
+      <input name="badge" value="4x3" type="radio">
       <label>4X3</label>
     </div>
   </div>
