--- a/frontend/app/templates/components/badge-component/badge-size.hbs
+++ b/frontend/app/templates/components/badge-component/badge-size.hbs
@@ -2,7 +2,7 @@
   <div class="field">
     <div class="ui radio checkbox">
       <input name="size" value="A3" type="radio">
-      <label>A5</label>
+      <label>4X3</label>
     </div>
   </div>
 </div>
