Fixes #1416 : Sets up badge size component (#1418)
* Sets up badge size component

* Changes A5 -> 4X3

--- a/frontend/app/templates/components/badge-component/badge-size.hbs
+++ b/frontend/app/templates/components/badge-component/badge-size.hbs
@@ -1,26 +1,8 @@
 <div class="inline fields">
-          <div class="field">
-            <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' 'A3' }}>
-              <input name="size" value="A3" type="radio">
-              <label>A3</label>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui radio checkbox" onclick={{ action 'mutateBadgeSize' 'A4' }}>
-              <input name="size" value="A4" type="radio">
-              <label>A4</label>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui radio checkbox" onclick={{ action 'mutateBadgeSize' 'A5' }}>
-              <input name="size" value="A5" type="radio">
-              <label>A5</label>
-            </div>
-          </div>
-          <div class="field">
-            <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' 'A6' }}>
-              <input name="size" value="A6" type="radio">
-              <label>A6</label>
-          </div>
+  <div class="field">
+    <div class="ui radio checkbox">
+      <input name="size" value="A3" type="radio">
+      <label>4X3</label>
     </div>
+  </div>
 </div>
