Provided Font Types similar to Eventbrite

--- a/frontend/app/templates/components/text-component/font-type.hbs
+++ b/frontend/app/templates/components/text-component/font-type.hbs
@@ -4,9 +4,13 @@
         <div class="default text">Select font from list</div>
         <i class="dropdown icon"></i>
         <div class="menu">
-            <div class="item" data-item="sans" style="font-family:'sans'">sans</div>
-            <div class="item" data-item="sans-serif" style="font-family:'sans-serif'">sans-serif</div>
-            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono space</div>
+            <div class="item" data-item="Lato" style="font-family:'Lato'">Lato</div>
+            <div class="item" data-item="sans" style="font-family:'sans'">Sans</div>
+            <div class="item" data-item="Courier-Bold" style="font-family:'Courier-Bold'">Courier</div>
+            <div class="item" data-item="Helvetica" style="font-family:'Helvetica'">Helvetica</div>
+            <div class="item" data-item="Times-Bold" style="font-family:'Times-Bold'">Times-Bold</div>
+            <div class="item" data-item="monospace" style="font-family:'monospace'">Mono Space</div>
+            <div class="item" data-item="Times-Roman" style="font-family:'Times-Roman'">Times-Roman</div>
             <div class="item" data-item="Courier 10 Pitch" style="font-family:'Courier 10 Pitch'">Courier 10 Pitch</div>
         </div>
     {{/ui-dropdown}}
