Ref #1408 : Added badge size of 4.5x4 on A2, A3, A4

--- a/frontend/app/templates/components/badge-component/badge-size.hbs
+++ b/frontend/app/templates/components/badge-component/badge-size.hbs
@@ -5,4 +5,10 @@
       <label>4X3</label>
     </div>
   </div>
+  <div class="field">
+    <div class="ui radio checkbox" onclick={{action 'mutateBadgeSize' '4.5x4'}}>
+      <input name="badge" value="4.5x4" type="radio">
+      <label>4.5X4</label>
+    </div>
+  </div>
 </div>
