Fixes password showing bug

--- a/frontend/app/templates/components/user-component/my-profile.hbs
+++ b/frontend/app/templates/components/user-component/my-profile.hbs
@@ -24,7 +24,7 @@
     </div>
     <div class="ui horizontal divider"></div>
     <div class="ui attached tab segment" id="place" data-tab="password">
-      {{user-component/user-password session=session isLoading=isLoadingPassword user=user sendUserPassword=(action 'updateUserPassword')}}
+      {{user-component/user-password session=session isLoading=isLoadingPassword sendUserPassword=(action 'updateUserPassword')}}
     </div>
   </div>
 </div>
