--- a/frontend/app/templates/components/user-component/user-password.hbs
+++ b/frontend/app/templates/components/user-component/user-password.hbs
@@ -5,7 +5,7 @@
         <label>New Password</label>
             <div class="fields">
                 <div class="ten wide field">
-                    {{input type="password" id="newPassword" name=newPassword value=user.password}}
+                    {{input type="password" id="newPassword" name=newPassword}}
                 </div>
             </div>
     </div>
