--- a/frontend/app/templates/components/nav-bar.hbs
+++ b/frontend/app/templates/components/nav-bar.hbs
@@ -5,7 +5,11 @@
     <div class="right menu">
         {{#if session.isAuthenticated}}
             {{#ui-dropdown class='large item' action='hide'}}
-                <div class="upper">{{session.currentUser.displayName}}</div><i class="dropdown icon"></i>
+                <div class="upper">
+                    <img class="ui avatar image" src="{{session.currentUser.photoURL}}">
+                    {{session.currentUser.displayName}}
+                </div>
+                <i class="dropdown icon"></i>
                 <div class="menu profile-dropdown-menu">
                     {{#link-to 'my-badges' class="large item navbar-dropdown upper"}}
                         My Badges
