--- a/frontend/app/templates/components/background-component/color-bg-component.hbs
+++ b/frontend/app/templates/components/background-component/color-bg-component.hbs
@@ -1,5 +1,11 @@
 <div class="field">
     <label>Select from a custom color</label>
-    {{col-pick-input value=defColor}}
+    <div class="ui grid">
+        <div class="two wide column">
+            {{col-pick-input value=defColor}}
+        </div>
+        <div class="column" style="background-color: #{{backColor}}; height: 35px; width: 35px; margin-top: 15px;">
+        </div>
+    </div>
 </div>
 
