--- a/frontend/app/templates/create-badges.hbs
+++ b/frontend/app/templates/create-badges.hbs
@@ -76,7 +76,7 @@
             </div>
             <div class="content">
                 <div class="center aligned">
-                    {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') }}
+                    {{ background-component/color-bg-component sendDefColor=(action 'mutateDefColor') backColor=backColor}}
                 </div>
             </div>
             <div class="ui horizontal divider">
